--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Products for Alura Geek fake store api",
   "main": "index.js",
   "scripts": {
-    "start": "node api/server.js"
+    "start": "node api/server.js",
+    "watch": "json-server --watch db.json --port 3000"
   },
   "repository": {
     "type": "git",
