--- a/package.json
+++ b/package.json
@@ -1,28 +1,17 @@
 {
-  "name": "alurageek-api",
+  "name": "api-alurageek",
   "version": "1.0.0",
-  "description": "Products for Alura Geek fake store api",
+  "description": "api para challenge aluraGeek",
   "main": "index.js",
   "scripts": {
     "start": "node api/server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/SofiDevO/alurageek-API.git"
+    "url": "https://github.com/yancarmtz/Api-dbjson-Alurageek"
   },
-  "keywords": [
-    "alura",
-    "alurageek",
-    "json-server",
-    "javascript",
-    "API"
-  ],
-  "author": "Sofidev, contact@itssofi.dev",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/SofiDevO/alurageek-API/issues"
-  },
-  "homepage": "https://github.com/SofiDevO/alurageek-API#readme",
+  "author": "Carlos Yañez Martinez",
+  "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "json-serve": "^0.1.0",
